Adding ubuntu font to text

--- a/gutschein.html
+++ b/gutschein.html
@@ -6,12 +6,13 @@
 		<title>Rätsel...</title>
 
 		<link rel="stylesheet" href="./css/output.css" />
+		<link rel="stylesheet" href="./css/fonts.css" />
 	</head>
 	<body class="h-full w-full flex items-center justify-center overflow-hidden bg-gray-500">
 		<div id="content" class="h-full w-full overflow-hidden select-none hidden">
 			<div class="h-full w-full z-10 absolute top-0 left-0 flex justify-center items-start">
 				<img class="h-auto w-full absolute top-0" src="./img/garland.png" alt="girlande">
-				<span class="h-auto w-full absolute bottom-1/2 pb-7 z-0 break-before-auto text-3xl flex text-center items-center">
+				<span class="h-auto w-full absolute bottom-1/2 pb-7 z-0 break-before-auto text-3xl ubuntu-regular flex text-center items-center">
 					LIEBER OLI<br>HAPPY BIRTHDAY!<br>Juhui! Nun haben wir schon die Hälfte unseres Geburiessens beisammen.
 				</span>
 			</div>
