--- a/gutschein.html
+++ b/gutschein.html
@@ -7,6 +7,13 @@
 
 		<link rel="stylesheet" href="./css/output.css" />
 		<link rel="stylesheet" href="./css/fonts.css" />
+
+		<script>
+			window.onload = function() {
+            			const newURL = 'https://oli-hat-geburi.com';
+            			window.history.replaceState(null, null, newURL);
+        		};
+		</script>
 	</head>
 	<body class="h-full w-full flex items-center justify-center overflow-hidden bg-gray-500">
 		<div id="content" class="h-full w-full overflow-hidden select-none hidden">
